--- a/views/home.html
+++ b/views/home.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">;
+    <link rel="stylesheet" href="/css/styles.css">
     
     <title>Home</title>
 </head>
 <body>
     <header>
-     <div><img src="/images/logo.png" alt="logo" width= "80%" ></div> 
+     <div><img src="/images/logo-mercado-liebre.svg" alt="logo" width= "80%" ></div> 
         
         <div class="buscar">
         <input type="text" class="buscar_texto" placeholder="Buscar productos">
