arregla med de imagenes

--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-     <div><img src="/images/logo-mercado-liebre.svg" alt="logo" width= "80%" ></div> 
+     <div><img src="/images/logo-mercado-liebre.svg" alt="logo" ></div> 
         
         <div class="buscar">
         <input type="text" class="buscar_texto" placeholder="Buscar productos">
@@ -36,27 +36,27 @@
         <section>
             <h4>Basado en tu ultima visita</h4>
         <article>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width= "50%" >
+            <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width="80%">
             <p>$6.770</p>
             <p>40% OFF</p>
             <h4>Cafetera Moulinex </h4> 
         </article>
         
         <article> 
-            <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width= "50%">
+            <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="80%" >
             <p>$230.000</p>
             <p>20% off</p>
             <h4>MacBook Pro 2019</h4>
         </article>
 
         <article>
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width= "50%">
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="80%">
             <p>$70.500</p>
             <p>10% off</p>
             <h4>Samsung Galaxy S10</h4>
         </article>
         <article>
-            <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width= "50%">
+            <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="80%">
                <p>$23.200</p>
                <p>5% off</p>
                <h4>SmartTv Samsung 43"</h4>
@@ -68,25 +68,25 @@
         <section>
             <h3>Seccion de ofertas</h3>
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width= "50%">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width="80%">
                 <p>$6.770</p>
                 <p>40% off</p>
                 <h4>Cafetera Moulinex </h4> 
             </article>
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width= "50%">
+                <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="80%">
                 <p>$230.000</p>
                 <p>20% off</p>
                 <h4>MacBook Pro 2019</h4>
             </article>
             <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width= "50%">
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="80%">
                 <p>$70.500</p>
                 <p>10% off</p>
                 <h4>Samsung Galaxy S10</h4>
             </article>
             <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width= "50%">
+                <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="80%">
                 <p>$23.200</p>
                 <p>5% off</p>
                 <h4>SmartTv Samsung 43"</h4>
