--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,7 +1,7 @@
 footer{
     
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
 }
 footer div i{
     text-align: center;
@@ -18,5 +18,6 @@ p.derechos {
     margin-right:20%;
     padding-top:30px;
     padding-bottom: 20px;
+    color:var(--colorGrisoscuro);
     
 }
