--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,22 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    
+
     <title>Home</title>
 </head>
-<body class="home"> 
+
+<body class="home">
     <header>
-     <div><img src="/images/logo-mercado-liebre.svg" alt="logo" ></div> 
-        
+        <div><img src="/images/logo-mercado-liebre.svg" alt="logo"></div>
+
         <div class="buscar">
-        <input type="text" class="buscar_texto" placeholder="Buscar productos, marcas">
+            <input type="text" class="buscar_texto" placeholder="Buscar productos, marcas">
+            <div class="lupita"> <i class="fas fa-search"></i></div>
         </div>
-        
-       <p> <i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de credito<p>
+      
+
+        <p> <i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de credito
+        <p>
         <nav>
             <ul>
                 <li> <a href="">Ofertas</a></li>
@@ -28,102 +33,127 @@
             </ul>
             <ul>
                 <li> <a href="">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
-                <li> <a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li> 
+                <li> <a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li> <a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-     <div class="btn-burger"><i class="fas fa-bars"></i></div>
-        
-    </header>
-    <main class= "productos">  
-       
-        <section class="ultima-visita">  
-            <h4 class=titulares>Basado en tu ultima visita</h4> 
-        <article>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width="80%">
-            <p class="precios">$6.770</p>
-            <p>40% OFF</p>
-            <h4>Cafetera Moulinex </h4> 
-        </article>
-        
-        <article> 
-            <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="80%" >
-            <p class="precios">$230.000</p>
-            <p>20% off</p>
-            <h4>MacBook Pro 2019</h4>
-        </article>
+        <div class="btn-burger"><i class="fas fa-bars"></i></div>
 
-        <article>
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="80%">
-            <p class="precios">$70.500</p>
-            <p>10% off</p>
-            <h4>Samsung Galaxy S10</h4>
-        </article>
-        <article>
-            <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="80%">
-               <p class="precios">$23.200</p>
-               <p>5% off</p>
-               <h4>SmartTv Samsung 43"</h4>
-        </article>
-                
-            
-           
+
+    </header>
+    <main class="productos">
+        <div class="banner"><img src="/images/img-home-banner.jpg"></div>
+        <section class="ultima-visita">
+            <h4 class=titulares>Basado en tu ultima visita</h4>
+            <article>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width="80%">
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$6.770</p>
+                    <p>40% OFF</p>
+                    <h4>Cafetera Moulinex </h4>
+                </div>
+            </article>
+
+            <article>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="80%">
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$230.000</p>
+                    <p>20% off</p>
+                    <h4>MacBook Pro 2019</h4>
+                </div>
+            </article>
+
+            <article>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="80%">
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$70.500</p>
+                    <p>10% off</p>
+                    <h4>Samsung Galaxy S10</h4>
+                </div>
+            </article>
+            <article>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="80%">
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$23.200</p>
+                    <p>5% off</p>
+                    <h4>SmartTv Samsung 43"</h4>
+                </div>
+            </article>
+
+
+
         </section>
         <section class="ofertas">
             <h4 class="titulares">Seccion de ofertas</h4>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width="80%">
-                <p class="Precios">$6.770</p>
-                <p>40% off</p>
-                <h4>Cafetera Moulinex </h4> 
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$6.770</p>
+                    <p>40% off</p>
+                    <h4>Cafetera Moulinex </h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="80%">
-                <p class="precios">$230.000</p>
-                <p>20% off</p>
-                <h4>MacBook Pro 2019</h4>
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$230.000</p>
+                    <p>20% off</p>
+                    <h4>MacBook Pro 2019</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="80%">
-                <p class="precios">$70.500</p>
-                <p>10% off</p>
-                <h4>Samsung Galaxy S10</h4>
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$70.500</p>
+                    <p>10% off</p>
+                    <h4>Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="80%">
-                <p class="precios">$23.200</p>
-                <p>5% off</p>
-                <h4>SmartTv Samsung 43"</h4>
-            
-            
+                <div class="caja-descriptiva">
+                    <div class="camioneta"><i class="fas fa-truck"></i></div>
+                    <p class="precios">$23.200</p>
+                    <p>5% off</p>
+                    <h4>SmartTv Samsung 43"</h4>
+                </div>
+
 
         </section>
 
     </main>
-    
+
     <footer>
-        
+
         <div>
             <i class="fas fa-credit-card"></i>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
+                puntos de pago. ¡Y siempre es seguro!</p>
         </div>
-                
+
         <div> <i class="fas fa-gift"></i>
             <h4>Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
-        </div>    
+                productos. Es un beneficio de Mercado Puntos.</p>
+        </div>
         <div><i class="fas fa-user-shield"></i>
             <h4>Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-        porque estás siempre protegid@.
-       
-        </div>   
-        <p class="derechos">Copyright © 1999-2020 MercadoLiebre S.R.L.</p> 
-       
+                porque estás siempre protegid@.
+
+        </div>
+        <p class="derechos">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+
 
     </footer>
 </body>
+
 </html>
