--- a/views/home.html
+++ b/views/home.html
@@ -23,7 +23,7 @@
             <div class="buscar">
                 <form action="">
                     <input type="text" class="buscar_texto" placeholder="Buscar productos, marcas">
-                    <div class="lupita"> <i class="fas fa-search"></i></div>
+                    <button> <i class="fas fa-search"></i></button>
                 </form>
             </div>
             <!--compra en cuotas-->
@@ -71,20 +71,21 @@
 
             <article>
                 <div>
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="80%">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="100%">
                 </div>
                 <div class="datos">
                     <i class="fas fa-truck"></i>
                     <div class="caja-precios">
                         <p class="precios">$6.770</p>
                         <p class="descuento">40% OFF</p>
-                        <p class="descripcion">Cafetera Moulinex </h4>
                     </div>
+                    <p class="descripcion">Cafetera Moulinex </p>
+
                 </div>
             </article>
 
             <article>
-                <div><img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="80%">
+                <div><img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="100%">
                 </div>
                 <div class="datos">
                     <i class="fas fa-truck"></i>
@@ -92,12 +93,12 @@
                         <p class="precios">$6.770</p>
                         <p class="descuento">40% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </h4>
+                    <p class="descripcion">Cafetera Moulinex </p>
 
                 </div>
             </article>
             <article>
-                <div><img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="80%">
+                <div><img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="100%">
                 </div>
                 <div class="datos">
                     <i class="fas fa-truck"></i>
@@ -105,7 +106,7 @@
                         <p class="precios">$6.770</p>
                         <p class="descuento">40% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </h4>
+                    <p class="descripcion">Cafetera Moulinex </p>
 
                 </div>
             </article>
@@ -117,7 +118,7 @@
             <h4 class="titulares">Seccion de ofertas</h4>
             <article>
                 <div>
-                    <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width="80%">
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="imagen" width="100%">
                 </div>
                 <div class="datos">
                     <i class="fas fa-truck"></i>
@@ -131,7 +132,7 @@
             </article>
             <article>
                 <div>
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="80%">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen" width="100%">
                 </div>
                 <div class="datos">
                     <i class="fas fa-truck"></i>
@@ -145,7 +146,7 @@
             </article>
             <article>
                 <div>
-                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="80%">
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen" width="100%">
                 </div>
                 <div class="datos">
                     <i class="fas fa-truck"></i>
@@ -159,7 +160,7 @@
             </article>
             <article>
                 <div>
-                    <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="80%">
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="imagen" width="100%">
                 </div>
                 <div class="datos">
                     <i class="fas fa-truck"></i>
