posicionamiento avanzado done

--- a/views/home.html
+++ b/views/home.html
@@ -76,10 +76,10 @@
                 <div class="datos">
                     <i class="fas fa-truck"></i>
                     <div class="caja-precios">
-                        <p class="precios">$6.770</p>
-                        <p class="descuento">40% OFF</p>
+                        <p class="precios">$230.000</p>
+                        <p class="descuento">20% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </p>
+                    <p class="descripcion">MacBook Pro 2019 </p>
 
                 </div>
             </article>
@@ -90,10 +90,10 @@
                 <div class="datos">
                     <i class="fas fa-truck"></i>
                     <div class="caja-precios">
-                        <p class="precios">$6.770</p>
-                        <p class="descuento">40% OFF</p>
+                        <p class="precios">$70.500</p>
+                        <p class="descuento">10% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </p>
+                    <p class="descripcion">Samsung Galaxy S10 </p>
 
                 </div>
             </article>
@@ -103,10 +103,10 @@
                 <div class="datos">
                     <i class="fas fa-truck"></i>
                     <div class="caja-precios">
-                        <p class="precios">$6.770</p>
-                        <p class="descuento">40% OFF</p>
+                        <p class="precios">$23.200</p>
+                        <p class="descuento">5% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </p>
+                    <p class="descripcion">SmartTv Samsung 43" </p>
 
                 </div>
             </article>
@@ -137,10 +137,10 @@
                 <div class="datos">
                     <i class="fas fa-truck"></i>
                     <div class="caja-precios">
-                        <p class="precios">$6.770</p>
-                        <p class="descuento">40% OFF</p>
+                        <p class="precios">$230.000</p>
+                        <p class="descuento">20% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </p>
+                    <p class="descripcion">MacBook Pro 2019 </p>
 
                 </div>
             </article>
@@ -151,10 +151,10 @@
                 <div class="datos">
                     <i class="fas fa-truck"></i>
                     <div class="caja-precios">
-                        <p class="precios">$6.770</p>
-                        <p class="descuento">40% OFF</p>
+                        <p class="precios">$70.500</p>
+                        <p class="descuento">10% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </p>
+                    <p class="descripcion">Samsung Galaxy S10 </p>
 
                 </div>
             </article>
@@ -165,10 +165,10 @@
                 <div class="datos">
                     <i class="fas fa-truck"></i>
                     <div class="caja-precios">
-                        <p class="precios">$6.770</p>
-                        <p class="descuento">40% OFF</p>
+                        <p class="precios">$23.200</p>
+                        <p class="descuento">5% OFF</p>
                     </div>
-                    <p class="descripcion">Cafetera Moulinex </p>
+                    <p class="descripcion">SmartTv Samsung 43" </p>
 
                 </div>
 
