--- a/views/home.html
+++ b/views/home.html
@@ -39,8 +39,8 @@
                 <li> <a href="">Ayuda</a></li>
             </ul>
             <ul>
-                <li> <a href="">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
-                <li> <a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li> <a href="/register">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
+                <li> <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li> <a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
@@ -171,7 +171,7 @@
                     <p class="descripcion">SmartTv Samsung 43" </p>
 
                 </div>
-
+            </article>
 
         </section>
 
